--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
 version = "1.3.2"
 
 [deps]
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [weakdeps]
@@ -15,6 +15,6 @@ MPIExt = "MPI"
 
 [compat]
 MPI = "0.20"
-PyCall = "1"
+PythonCall = "0.9.30"
 Strided = "2"
 julia = "1.9"
